--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <div class="hero-2">
             <div class="input-group-2">
-                <input type="text" placeholder="Email address" required>
+                <input class="input" type="text" placeholder="Email address" required>
                 <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
