Completed Netflix clone with full responsive design and final adjustments

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <div class="select-wrapper">
                     <img src="assets/Images/language.png" alt="Language" class="language-icon">
                     <select class="language-select">
-                        <option value="en">English</option>
-                        <option value="hi">Hindi</option>
+                        <option class="option-center" value="en">English</option>
+                        <option class="option-center" value="hi">Hindi</option>
                     </select>
                 </div>
                 <button class="btn btn-red-sm">Sign in</button>
@@ -188,8 +188,8 @@
         <div class="group">
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <div class="hero-2">
-            <div class="input-group-2">
-                <input class="input" type="text" placeholder="Email address" required>
+            <div class="input-group">
+                <input type="text" placeholder="Email address" required>
                 <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
